# claude-memory-palace

./: .gitignore  CENTRALITY_RETRIEVAL_SUMMARY.md  CHANGELOG_CENTRALITY.md  LICENSE  README.md  install.bat  install.ps1  install.sh  pyproject.toml  test_centrality_retrieval.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: MAINTENANCE.md  MAINTENANCE_QUICKREF.md  MIGRATION_2.0.md  OPENCLAW.md  POSTGRES.md  QUICKSTART_CENTRALITY.md  README.md  TESTING_MAINTENANCE.md  architecture.md  centrality-weighted-retrieval.md  models.md  use-cases.md
docs/archive/: BEFORE_AFTER_EXAMPLES.md  CHANGELOG_CENTRALITY.md  IMPLEMENTATION_SUMMARY.md  MAINTENANCE_IMPLEMENTATION.md  PLAN-openclaw-push.md
examples/: agent-prompt.md  centrality_weighted_search.py  soul-file.md  test_graph_context_mcp.md  test_maintenance.py  test_maintenance_mcp.md
extensions/moltbook-gateway/: README.md  pyproject.toml  server.py
extensions/toon-converter/: EXAMPLES.md  IMPLEMENTATION.md  README.md  __init__.py  __main__.py  cli.py  converter.py  server.py
installer/: ARCHITECTURE.md
installer/gui/: __init__.py  app.py
installer/linux/: build.py  run_gui.py
installer/macos/: build.py  run_gui.py
installer/shared/: __init__.py  clients.py  detect.py  install_core.py  migrate.py  models.py
installer/windows/: build.py  build_bundled_exe.py  build_exe.py  bundled_setup_gui.py  run_gui.py  setup_gui.py  setup_gui.pyw
mcp_server/: __init__.py  server.py  toon_wrapper.py
mcp_server/extensions/: README.md  __init__.py  db_manager.py  switch_db.py
mcp_server/tools/: __init__.py  archive.py  audit.py  backfill_embeddings.py  (+23 more)
memory_palace/: __init__.py  bridge.py  config.py  config_v1.py  config_v2.py  database.py  database_v1.py  database_v2.py  database_v3.py  embeddings.py  llm.py  models.py  models_v1.py  models_v2.py  models_v3.py
moltbook_tools/: __init__.py  __main__.py  cli.py  config.py  database.py  gateway.py  models.py  qc.py
openclaw_plugin/: PATCH_NOTES.md  openclaw.plugin.json  package-lock.json  package.json
setup/: __init__.py  configure_claude.py  detect_gpu.py  first_run.py  model_recommendations.py
tests/: conftest.py  test_gateway.py  test_notify_hook.py  test_push_notify.py  test_sqlite_to_postgres_migration.py  test_v3_core_services.py  test_v3_maintenance_extensions.py  test_v3_migration_messages.py
tools/: apply_edges_batch.py  code_transpiler.py  dump_memories_toon.py  migrate_to_postgres.py  test_get_memory_format.py  test_graph_context.py  toon_converter.py
(+53 files in other folders)
