[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-palace"
version = "2.0.0"
description = "Persistent semantic memory for AI agents — any model, any provider, your hardware, your data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jeff Pierce", email = "jeff.r.pierce@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["memory", "mcp", "semantic-search", "llm", "ai-agents", "knowledge-graph"]

dependencies = [
    "sqlalchemy>=2.0",
    "requests>=2.28",
    "mcp>=1.0",
    "psycopg2-binary>=2.9",  # PostgreSQL adapter
    "pgvector>=0.3",  # pgvector support for SQLAlchemy
    "toons>=0.1",  # TOON encoding for token-efficient MCP responses
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/jeffpierce/memory-palace"
Repository = "https://github.com/jeffpierce/memory-palace"
Issues = "https://github.com/jeffpierce/memory-palace/issues"

[project.scripts]
memory-palace-mcp = "mcp_server.server:main"
memory-palace-migrate = "memory_palace.migrations.v2_to_v3:main"
memory-palace-migrate-v3-1 = "memory_palace.migrations.v3_to_v3_1:main"
memory-palace-sqlite-to-pg = "memory_palace.migrations.sqlite_to_postgres:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_palace*", "mcp_server*", "moltbook_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
